# EssaDB

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: linux.yml
assets/layouts/: ConnectToEssaDB.eml  ConnectToMySQL.eml  ImportCSV.eml  MainWidget.eml
cmake/: FindMySQL.cmake
db/: CMakeLists.txt
db/core/: AST.cpp  AST.hpp  AbstractTable.cpp  AbstractTable.hpp  Column.hpp  Database.cpp  Database.hpp  DatabaseEngine.hpp  DbError.hpp  Expression.cpp  Expression.hpp  Function.cpp  Function.hpp  ImportMode.hpp  IndexedRelation.hpp  Regex.hpp  Relation.cpp  Relation.hpp  ResultSet.cpp  ResultSet.hpp  Row.hpp  RowWithColumnNames.cpp  RowWithColumnNames.hpp  Select.cpp  Select.hpp  SelectResult.cpp  SelectResult.hpp  Table.cpp  Table.hpp  TableExpression.cpp  TableExpression.hpp  TableSetup.hpp  Tuple.cpp  Tuple.hpp  TupleFromValues.cpp  TupleFromValues.hpp  Value.cpp  Value.hpp  ValueOrResultSet.hpp
db/core/ast/: ASTNode.hpp  EvaluationContext.hpp  Expression.cpp  Expression.hpp  Select.cpp  Select.hpp  SelectColumns.cpp  SelectColumns.hpp  Show.cpp  Show.hpp  Statement.cpp  Statement.hpp  TableExpression.cpp  TableExpression.hpp
db/sql/: Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Printing.cpp  Printing.hpp  SQL.cpp  SQL.hpp  SQLError.hpp  Select.cpp  Select.hpp
db/sql/ast/: ASTNode.hpp  EvaluationContext.hpp  Expression.cpp  Expression.hpp  Function.cpp  Function.hpp  Select.cpp  Select.hpp  SelectColumns.cpp  SelectColumns.hpp  Show.cpp  Show.hpp  Statement.cpp  Statement.hpp  TableExpression.cpp  TableExpression.hpp
db/storage/: CSVFile.cpp  CSVFile.hpp  FileBackedTable.cpp  FileBackedTable.hpp  Serializer.cpp  Serializer.hpp
db/storage/edb/: AlignedAccess.hpp  Definitions.cpp  Definitions.hpp  EDBFile.cpp  EDBFile.hpp  EDBRelationIterator.cpp  EDBRelationIterator.hpp  Endian.hpp  Heap.cpp  Heap.hpp  MappedFile.cpp  MappedFile.hpp  Serializer.cpp  Serializer.hpp
db/util/: Clock.hpp  Error.hpp
docs/: CodeStructure.md  CodingStyle.md  EDBFileFormat.md  Functions.md
docs/Functions/: Aggregate.md  Datetime.md  General.md  Math.md  String.md
gui/: CMakeLists.txt  ConnectDialog.cpp  ConnectDialog.hpp  ConnectToMySQLDialog.hpp  DatabaseModel.cpp  DatabaseModel.hpp  ImportCSVDialog.hpp  SQLSyntaxHighlighter.cpp  SQLSyntaxHighlighter.hpp  Structure.hpp  main.cpp
gui/assets/layouts/: ConnectToEssaDB.eml  ConnectToMySQL.eml  MainWidget.eml
gui/client/: ConnectToEssaDBDialog.cpp  ConnectToEssaDBDialog.hpp  ConnectToMySQLDialog.cpp  ConnectToMySQLDialog.hpp  DatabaseClient.cpp  DatabaseClient.hpp  EssaDBDatabaseClient.cpp  EssaDBDatabaseClient.hpp  MySQLDatabaseClient.cpp  MySQLDatabaseClient.hpp
repl/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  main.cpp
src/: main.cpp
src/core/: AST.cpp  AST.hpp  Column.hpp  Database.hpp  DbError.hpp  Row.hpp  RowWithColumnNames.cpp  RowWithColumnNames.hpp  SelectResult.cpp  SelectResult.hpp  Table.cpp  Table.hpp  Value.cpp  Value.hpp
src/util/: Error.hpp
tests/: CMakeLists.txt  execution.cpp  setup.cpp  setup.hpp
tests/sql/: multiple_tables.sql
tests/sql/aggregate/: count_with_group_by.sql  count_with_group_by_and_order_by.sql  count_with_having_and_group_by.sql  count_with_where_and_group_by.sql  error_not_all_columns_aggregate.sql  group_by_without_aggregation.sql  group_by_without_aggregation_not_all_grouped_by.sql  simple.sql
tests/sql/db_manipulation/: alter_column_with_constraints.sql  alter_table_add_column.sql  alter_table_alter_column.sql  alter_table_drop_column.sql  autoincrement.sql  check_values.sql  create_table_existing.sql  default_values.sql  delete.csv  delete_with_where.sql  delete_without_where.sql  drop_table.sql  drop_table_with_if_exists.sql  insert_into.sql  insert_into_with_select.sql  multiple_checks.sql  multiple_checks_alter.sql  not_null_constraint.sql  primary_key.sql  truncate_table.sql  unique_constraint.sql  update_assignment.sql  update_expression.sql
tests/sql/functions/: functions.csv  functions.sql  lower_upper.sql  trim.sql
tests/sql/functions/date/: datediff.sql  day_month_year.sql
tests/sql/functions/numeric/: data.csv  data_asin.csv  simple.sql
tests/sql/functions/string/: lower_upper.csv  lower_upper.sql  simple.sql  trim.sql
tests/sql/keys_indexes/: constraint_insert.sql  customers.csv  orders.csv
tests/sql/operators/: arithmetic.sql  concatenation.sql  regex.sql  unary.sql
tests/sql/parser/: case_insensitivity.sql  dates.sql  expected_errors.sql  identifiers.sql  not_exists.sql
tests/sql/select/: basic.sql  distinct.csv  distinct.sql  nonexistent_columns.sql  order_by.sql  select_into.sql  select_with_subquery_without_from.sql  select_without_from.sql  table_identifiers.sql  table_identifiers_with_aliases.sql  union.sql
tests/sql/select/aggregate/: aggregate.csv  aggregate_expressions.sql  aggregate_not_top_level.sql  count_with_group_by.sql  count_with_group_by_and_order_by.sql  count_with_having_and_group_by.sql  count_with_partition_by.sql  count_with_where_and_group_by.sql  empty_table.sql  error_nonexistent_column.sql  group_by_without_aggregation.sql  group_by_without_aggregation_not_all_grouped_by.sql  having_with_alias.sql  simple.sql
tests/sql/select/joins/: cross_join.sql  joins_with_subquery.sql  nonexistent_on_column.sql  simple_joins.sql  tablea.csv  tableb.csv
tests/sql/select/subqueries/: data.csv  error_multiple_rows_columns.sql  select_with_subquery_in_where.sql  select_with_subquery_without_from.sql  students.csv  subquery_stack.sql
tests/sql/select/where/: and.sql  and_or.sql  between.sql  in.sql  is_null.sql  like.sql  or.sql  simple.sql  where.csv  with_function.sql
tests/sql/storage/: heap_multiple_blocks.sql
tests/testcases/: aggregate.cpp  arithmetic.cpp  csv.cpp  db_manipulation.cpp  execution.cpp  func.cpp  multiple.cpp  numeric_func.cpp  sql.cpp  storage.cpp  where.cpp
